# QtWebView

./: .cmake.conf  .gitignore  CMakeLists.txt  dependencies.yaml
cmake/: FindWebView2.cmake
examples/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/android/: qandroidwebview.cpp  qandroidwebview_p.h  qandroidwebviewplugin.cpp
src/plugins/darwin/: CMakeLists.txt  qdarwinwebview.mm  qdarwinwebview_p.h  qdarwinwebviewplugin.cpp  qdarwinwebviewplugin.h
src/plugins/linux/: CMakeLists.txt  qlinuxwebview.cpp  qlinuxwebview_p.h  qlinuxwebviewplugin.cpp  qlinuxwebviewplugin.h
src/plugins/wasm/: qwasmwebview.cpp  qwasmwebview_p.h  qwasmwebviewplugin.cpp
src/plugins/webengine/: qwebenginewebview.cpp  qwebenginewebview_p.h  qwebenginewebviewplugin.cpp
src/plugins/windows/: CMakeLists.txt  qwebview2webview.cpp  qwebview2webview_p.h  qwebview2webviewplugin.cpp  qwebview2webviewplugin.h
src/plugins/winrt/: qwinrtwebview.cpp  qwinrtwebview_p.h  qwinrtwebviewplugin.cpp
src/quick/: qquickwebview.cpp  qquickwebview_p.h  qquickwebviewloadrequest.cpp  qquickwebviewloadrequest_p.h  qquickwebviewsettings.cpp  qquickwebviewsettings_p.h  qtwebviewquickglobal_p.h
src/webview/: CMakeLists.txt  configure.cmake  qabstractwebview_p.h  qtwebviewfunctions.cpp  qtwebviewfunctions.h  qwebview.cpp  qwebview_global.h  qwebview_p.h  qwebviewfactory.cpp  qwebviewfactory_p.h  qwebviewinterface_p.h  qwebviewloadrequest.cpp  qwebviewloadrequest_p.h  qwebviewplugin.cpp  qwebviewplugin_p.h
src/webview/doc/src/: qtwebview-overview.qdoc
tests/auto/qml/qquickwebview/: CMakeLists.txt  tst_qquickwebview.cpp
tests/auto/webview/qwebview/: CMakeLists.txt  tst_qwebview.cpp
